Change maven sure file plugin to 3.0.0