@@ -86,14 +86,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-                     <includes>
+                <version>3.0.0-M3</version>
+		        <configuration>
+		          <useSystemClassLoader>false</useSystemClassLoader>
+		          <includes>
                        <include>${acceptanceSourceDirectory}/java/**/*Test.java</include>
                     </includes>  
-                    <forkCount>0</forkCount>
-        			<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-                </configuration>
+		        </configuration>                
             </plugin>
             
             <plugin>
